--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server": "^2.1.0",
     "apollo-server-express": "^2.1.0",
+    "cors": "^2.8.4",
     "graphql": "^14.0.2"
   }
 }
